se aplica estilo de cambio de color a rojo a los letreros de se necesita un valor

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
@@ -110,6 +110,22 @@
 
 }
 
+.uno{
+    color: red;
+}
+
+.dos{
+    color: red;
+}
+
+.tres{
+    color: red;
+}
+
+.cuatro{
+    color: red;
+}
+
 @media screen and (max-width: 1024px) {
     .titulo-14 h3{
         font-size: 19px;
