--- a/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
@@ -11,6 +11,7 @@
 }
 .calificar > form  > div:nth-child(2n) {
     background-color: rgba(189, 195, 199,0.5);
+    padding-bottom: 10px;
 }
 h2{
     background-color: white;
@@ -29,9 +30,9 @@ ul{
 
 .calificar > form > div > div:first-child > :last-child{
     display: block;
-    padding: 3px;
+    padding: 3px 6px;
     margin-top: 14px;
-    border: 2px solid #F4D03F;
+    color: black;
 }
 .calificar > form > div > div:last-child > span{
     display: inline-block;
@@ -107,4 +108,7 @@ ul{
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
 }
-
+input[type="text"]::placeholder{
+    color: red;
+    font-weight: 700;
+}
