--- a/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      translate="no"  >
 <ui:include src="head-alumno.xhtml"/>
 <h:body  pt:uk-height-viewport="">
     <div id="cargado" class="spinner spinner-open" >
