menu eliminar actividad

--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -92,3 +92,7 @@ ul > li > span {
     font-weight: 900;
     background: white !important;
 }
+.tabla-profesor-dropdown .uk-dropdown{
+    padding: 10px;
+    min-width: 100px;
+}
