--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/coordinador.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/coordinador.css
@@ -1,3 +1,96 @@
+
+
 svg g {
     stroke: white;
 }
+.seccion-principal{
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 3fr 7fr;
+    grid-template-rows: 450px;
+    grid-gap: 0 10px;
+}
+
+.card{
+    width: 100%;
+    min-height: 200px;
+    border-radius: 8px;
+    border: 2px solid var(--azul-primary-color);
+    box-sizing: border-box;
+}
+.card p{
+    margin: 0;
+}
+.card-titulo, .card-cuerpo, .card-pie{
+    padding: 20px 20px;
+    box-sizing: border-box
+}
+.card-titulo,.card-cuerpo{
+    border-bottom: 1px solid #95A5A6;
+}
+
+.card-titulo > div  > img{
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    display: inline-block;
+    margin-right: 30px;
+}
+.card-titulo > div:first-child{
+    display: flex;
+    margin-bottom: 10px;
+}
+.card-titulo > div:first-child > .card-informacion{
+    flex-grow: 1;
+}
+
+.card-titulo > p > span{
+    font-weight: 900;
+    color: #757575;
+}
+
+.card-informacion > p:first-child{
+    font-weight: 900;
+    color: black;
+}
+.seccion-principal > div:last-child{
+    padding-left: 40px;
+    padding-top: 10px;
+}
+.seccion-principal > div:last-child  *{
+    box-sizing: border-box;
+}
+
+.seccion-principal > div:last-child > label{
+width: 20%;
+}
+.seccion-principal > div:last-child > input{
+    width: 80%;
+}
+.seccion-principal > div:last-child > div{
+    display: flex;
+    flex-wrap: wrap;
+}
+.seccion-principal > div:last-child > div > div{
+    flex-basis: 0;
+    flex-grow: 1;
+    padding: 0 3px;
+}
+.seccion-principal > div:last-child  span{
+    display: inline-block;
+    width: 100%;
+    border-radius: 5px;
+    border: 2px solid var(--color-nav-primary);
+    padding: 5px 2px;
+    margin-top: 20px;
+}
+
+.lista{
+    height: 400px;
+    overflow: auto;
+}
+
+
+
+
+
