--- a/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>
-    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/esquadron.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/esquadron.css"/>-->
+    <h:outputStylesheet library="css" name="esquadron.css"/>
 <!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/dashboard-profesor.css"/>-->
     <h:outputStylesheet library="css" name="/profesor/dashboard-profesor.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/spinner.css"/>
