--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -96,3 +96,7 @@ ul > li > span {
     padding: 10px;
     min-width: 100px;
 }
+
+.tabla-profesor-dropdown .img-previa:hover{
+    cursor: pointer;
+}
