--- a/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
@@ -9,7 +9,7 @@
     <meta charset="UTF-8"/>
     <meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
     <meta name="google" content="notranslate"/>
-    <title>Template alumno</title>
+    <title>Alumno</title>
     <link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
