--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -100,3 +100,7 @@ ul > li > span {
 .tabla-profesor-dropdown .img-previa:hover{
     cursor: pointer;
 }
+
+.visibilidad{
+    display: none!important;
+}
