--- a/tecolotl-web/src/main/webapp/resources/css/profesor/grafica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/grafica.css
@@ -346,20 +346,35 @@
     overflow: auto;
 }
 
-.boton-subir-nivel {
-    background-color: var(--azul-primary-color);
-    padding: 2px 10px;
-    color: white;
+.boton-base-nivel{
     font-weight: bold;
     border-style: solid;
     border-width: 3px;
     border-radius: 20px;
-    text-align: center;
     display: inline-block;
+    padding: 2px 10px;
+}
+
+.boton-subir-nivel {
+    background-color: var(--azul-primary-color);
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    text-transform: uppercase;
+}
+
+.boton-bajar-nivel{
+    background-color: var(--color-peligro);
+    color: white;
+    text-align: center;
     font-size: 10px;
     text-transform: uppercase;
 }
 .boton-subir-nivel:hover{
+    color: black;
+    cursor: pointer;
+}
+.boton-bajar-nivel:hover{
     color: black;
     cursor: pointer;
 }
