--- a/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
@@ -93,9 +93,12 @@ li .A1{
 .A1>div>div>.uk-card-footer > div > div > span{
     padding-left: 63px;
 }
-.A1>div>div>.uk-card-header>div>div>:nth-child(3){
+.A1 .uk-card-header{
     color: var(--psecundary-option-three);
     font-weight: bold;
+}
+.A1>div>div>.uk-card-header>div>div>:nth-child(3){
+
     width: 212px;
     display: inline-block;
     text-align: center;
@@ -115,9 +118,13 @@ li .A2{
 .A2>div>div>.uk-card-footer > div > div > span{
     padding-left: 63px;
 }
-.A2>div>div>.uk-card-header>div>div>:nth-child(3){
+
+.A2 .uk-card-header{
     color: #D35400;
     font-weight: bold;
+}
+.A2>div>div>.uk-card-header>div>div>:nth-child(3){
+
     width: 212px;
     display: inline-block;
     text-align: center;
@@ -137,12 +144,15 @@ li .A1A2{
 .A1A2>div>div>.uk-card-footer > div > div > span{
     padding-left: 130px;
 }
-.A1A2>div>div>.uk-card-header>div>div>:nth-child(4){
+.A1A2 .uk-card-header{
     background: -webkit-linear-gradient(top right, var(--psecundary-option-three), #D35400);
     background: linear-gradient(to left bottom, var(--psecundary-option-three), #D35400);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
+}
+.A1A2>div>div>.uk-card-header>div>div>:nth-child(4){
+
     width: 196px;
     display: inline-block;
     text-align: center;
@@ -162,9 +172,12 @@ li .B1{
 .B1>div>div>.uk-card-footer > div > div > span{
     padding-left: 130px;
 }
-.B1>div>div>.uk-card-header>div>div>:nth-child(3){
+
+.B1 .uk-card-header{
     color: var(--tsecundary-option-one) !important;
     font-weight: bold;
+}
+.B1>div>div>.uk-card-header>div>div>:nth-child(3){
     width: 212px;
     display: inline-block;
     text-align: center;
@@ -184,9 +197,11 @@ li .B2{
 .B2>div>div>.uk-card-footer > div > div > span{
     padding-left: 130px;
 }
-.B2>div>div>.uk-card-header>div>div>:nth-child(3){
+.B2 .uk-card-header{
     color: var(--asecundary-option-one);
     font-weight: bold;
+}
+.B2>div>div>.uk-card-header>div>div>:nth-child(3){
     width: 212px;
     display: inline-block;
     text-align: center;
@@ -206,9 +221,11 @@ li .C1{
 .C1>div>div>.uk-card-footer > div > div > span{
     padding-left: 130px;
 }
-.C1>div>div>.uk-card-header>div>div>:nth-child(3){
+.C1 .uk-card-header{
     color: var(--color-nav-primary);
     font-weight: bold;
+}
+.C1>div>div>.uk-card-header>div>div>:nth-child(3){
     width: 212px;
     display: inline-block;
     text-align: center;
@@ -228,9 +245,11 @@ li .C2{
 .C2>div>div>.uk-card-footer > div > div > span{
     padding-left: 130px;
 }
-.C2>div>div>.uk-card-header>div>div>:nth-child(3){
+.C2 .uk-card-header{
     color: var(--color-peligro);
     font-weight: bold;
+}
+.C2>div>div>.uk-card-header>div>div>:nth-child(3){
     width: 212px;
     display: inline-block;
     text-align: center;
