--- a/tecolotl-web/src/main/webapp/resources/css/profesor/grafica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/grafica.css
@@ -354,11 +354,11 @@
     border-radius: 3px;
 }
 .boton-subir-nivel {
-    background: url("#{resource['img/icono/subir.png']}") no-repeat center/100%;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/subir.png") no-repeat center/100%;
 }
 
 .boton-bajar-nivel{
-    background: url("#{resource['img/icono/bajar.png']}") no-repeat center/100%;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/bajar.png") no-repeat center/100%;
 }
 
 .desactivado-nivel{
