--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -868,6 +868,13 @@ textarea::-webkit-scrollbar-thumb:hover {
     background-color: #2ECC71!important;
     color: white!important;
 }
+.color-correcto{
+    color: #2ECC71!important;
+}
+.color-incorrecto{
+    color: #E74C3C!important;
+}
+
 
 .score{
     background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/meteorito.svg") no-repeat center/100%;
@@ -881,6 +888,11 @@ textarea::-webkit-scrollbar-thumb:hover {
     font-weight: 900;
     font-size: 27px;
     color: white
+}
+.letra-score{
+    font-weight: 900;
+    font-size: 27px;
+    color: white;
 }
 
 @media screen and (max-width: 1030px ){
