--- a/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/head-alumno.xhtml
@@ -14,7 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
-    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/esquadron.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/esquadron.css"/>-->
+    <h:outputStylesheet library="css" name="esquadron.css"/>
 <!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/template-alumno.css"/>-->
     <h:outputStylesheet library="css" name="/alumno/template-alumno.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/spinner.css"/>
