--- a/tecolotl-web/src/main/webapp/resources/css/profesor/tarea-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/tarea-alumno.css
@@ -34,3 +34,45 @@
     text-transform: initial !important;
     font-weight: initial !important;
 }
+.tabla-alumnos{
+    transition: opacity 0.3s linear;
+}
+.tabla-alumnos > tbody > .hover-A1:hover{
+    background-color: rgba(232, 12, 162 ,0.2);
+}
+.tabla-alumnos > tbody > .hover-A2:hover{
+    background-color: rgba(211, 84, 0 ,0.2);
+}
+.tabla-alumnos > tbody > .hover-B1:hover{
+    background-color: rgba(232, 158, 12,0.2);
+}
+.tabla-alumnos > tbody > .hover-B2:hover{
+    background-color: rgba(101, 12, 232 ,0.2);
+}
+.tabla-alumnos > tbody > .hover-C1:hover{
+    background-color: rgba(0, 168, 236,0.2);
+}
+.tabla-alumnos > tbody > .hover-C2:hover{
+    background-color: rgba(240, 80, 110,0.2);
+}
+
+.visibilidad-fila{
+    opacity: 0;
+}
+label[for="filtro-nivel"]{
+    font-family: 'Sniglet', "Arial Black", sans-serif;
+    font-weight: 800;
+    margin-right: 8px;
+    color: black;
+    font-size: 18px;
+}
+#filtro-nivel{
+    display: inline-block;
+    padding: 7px 9px;
+    font-family: 'Sniglet', "Arial Black", sans-serif;
+    width: 142px;
+    text-transform: capitalize;
+}
+#filtro-nivel:focus{
+    outline: none;
+}
